--- a/Crowd_Funding_Platform/Views/Account/ForgotPassword.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/ForgotPassword.cshtml
@@ -1,33 +1,184 @@
 ﻿@model Crowd_Funding_Platform.Models.User
-@* @inject IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 
-<p>@HttpContextAccessor.HttpContext.Session.GetString("ForgetpwdEmail").ToString()</p> *@
+<html class="loading" lang="en" data-textdirection="ltr">
 
-@{
-    ViewData["Title"] = "Forgot Password";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <meta name="description" content="Frest admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
+    <meta name="keywords" content="admin template, Frest admin template, dashboard template, flat admin template, responsive admin template, web app">
+    <meta name="author" content="PIXINVENT">
+    <title>Login Page - Frest - Bootstrap HTML admin template</title>
+    <link rel="apple-touch-icon" href="~/Authentication_T/app-assets/images/ico/apple-icon-120.html">
+    <link rel="shortcut icon" type="image/x-icon" href="https://www.pixinvent.com/demo/frest-clean-bootstrap-admin-dashboard-template/~/Authentication_T/app-assets/images/ico/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600%7CIBM+Plex+Sans:300,400,500,600,700" rel="stylesheet">
 
-<div class="login-userheading">
-    <h3>Forgot Password?</h3>
-</div>
-<form id="forgotPassword" method="post">
+    <!-- BEGIN: Vendor CSS-->
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/vendors/css/vendors.min.css">
+    <!-- END: Vendor CSS-->
+    <!-- BEGIN: Theme CSS-->
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/bootstrap-extended.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/colors.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/components.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/themes/dark-layout.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/themes/semi-dark-layout.min.css">
+    <!-- END: Theme CSS-->
+    <!-- BEGIN: Page CSS-->
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/core/menu/menu-types/vertical-menu.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/app-assets/css/pages/authentication.css">
+    <!-- END: Page CSS-->
+    <!-- BEGIN: Custom CSS-->
+    <link rel="stylesheet" type="text/css" href="~/Authentication_T/assets/css/style.css">
+    <!-- END: Custom CSS-->
 
-    <div class="form-login">
-        <label>Email Address</label>
-        <div class="form-addons">
-            <input type="text" asp-for="Email" id="Email" placeholder="Enter your email here">
-            @* <img src="~/assets/img/icons/mail.svg" alt="img"> *@
+</head>
+
+<body class="vertical-layout vertical-menu-modern boxicon-layout no-card-shadow 1-column  navbar-sticky footer-static bg-full-screen-image  blank-page" data-open="click" data-menu="vertical-menu-modern" data-col="1-column">
+    <!-- BEGIN: Content-->
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- forgot password start -->
+                <section class="row flexbox-container">
+                    <div class="col-xl-7 col-md-9 col-10  px-0">
+                        <div class="card bg-authentication mb-0">
+                            <div class="row m-0">
+                                <!-- left section-forgot password -->
+                                <div class="col-md-6 col-12 px-0">
+                                    <div class="card disable-rounded-right mb-0 p-2">
+                                        <div class="card-header pb-1">
+                                            <div class="card-title">
+                                                <h4 class="text-center mb-2">Forgot Password?</h4>
+                                            </div>
+                                        </div>
+                                        <div class="form-group d-flex justify-content-between align-items-center mb-2">
+                                            <div class="text-left">
+                                                <div class="ml-3 ml-md-2 mr-1">
+                                                    <a href="~/Account/Login"
+                                                       class="card-link btn btn-outline-primary text-nowrap">
+                                                        Sign
+                                                        in
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="mr-3">
+                                                <a href="~/Account/Registration"
+                                                   class="card-link btn btn-outline-primary text-nowrap">
+                                                    Sign
+                                                    up
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="text-muted text-center mb-2">
+                                                <small>
+                                                    Enter the email or phone number you
+                                                    used
+                                                    when you joined
+                                                    and we will send you temporary password
+                                                </small>
+                                            </div>
+                                            <form class="mb-2" id="forgotPassword" method="post">
+                                                <div class="form-group mb-2">
+                                                    <label class="text-bold-600" asp-for="Email">
+                                                        Email@*  or
+                                                        Phone *@
+                                                    </label>
+                                                    <input type="text" asp-for="Email" id="Email" class="form-control" placeholder="Email">
+                                                </div>
+                                                <button type="submit" id="btnForgot" class="btn btn-primary glow position-relative w-100">
+                                                    <span class="spinner-border spinner-border-sm d-none" id="btnLoaderForgot" role="status" aria-hidden="true"></span>
+                                                    SEND
+                                                    PASSWORD<i id="icon-arrow" class="bx bx-right-arrow-alt"></i>
+                                                </button>
+                                            </form>
+                                            <div class="text-center mb-2">
+                                                <a href="auth-login.html">
+                                                    <small class="text-muted">
+                                                        I
+                                                        remembered my
+                                                        password
+                                                    </small>
+                                                </a>
+                                            </div>
+                                            <div class="divider mb-2">
+                                                <div class="divider-text">Or Sign in as</div>
+                                            </div>
+                                            <div class="d-flex flex-md-row flex-column">
+                                                <a href="javascript:void(0);"
+                                                   class="btn btn-social btn-google btn-block font-small-3 mb-1 mb-sm-1 mb-md-0 mr-md-1 text-center">
+                                                    <i class="bx bxl-google font-medium-3"></i><span class="pl-1">Google</span>
+                                                </a>
+                                                <a href="javascript:void(0);"
+                                                   class="btn btn-social btn-facebook btn-block font-small-3 text-center mt-0">
+                                                    <i class="bx bxl-facebook-square font-medium-3"></i><span class="pl-1">Facebook</span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- right section image -->
+                                <div class="col-md-6 d-md-block d-none text-center align-self-center">
+                                    <img class="img-fluid" src="~/Authentication_T/app-assets/images/pages/forgot-password.png"
+                                         alt="branding logo" width="300">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- forgot password ends -->
+
+            </div>
         </div>
     </div>
-    <div class="form-login">
-        <button type="submit" id="btnSubmit" class="btn btn-login">
-            <span class="spinner-border spinner-border-sm d-none" id="btnLoader" role="status" aria-hidden="true"></span>
-            Send Link
-        </button>
-    </div>
-</form>
 
-@section Scripts {
-    <script src="~/js/Login.js"></script>
-}
+
+<!-- Load jQuery First -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Bootstrap Bundle (includes Popper.js) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Load Vendors (Ensure jQuery is not duplicated inside) -->
+<script src="~/Authentication_T/app-assets/vendors/js/vendors.min.js"></script>
+@* 
+<!-- Load Unison (If needed) -->
+<script src="~/Authentication_T/app-assets/vendors/js/extensions/unison.min.js"></script> *@
+
+<!-- Load jQuery Validation Plugin -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+
+<!-- Load Theme Scripts -->
+<script src="~/Authentication_T/app-assets/js/core/app-menu.min.js"></script>
+<script src="~/Authentication_T/app-assets/js/core/app.min.js"></script>
+<script src="~/Authentication_T/app-assets/js/scripts/components.min.js"></script>
+<script src="~/Authentication_T/app-assets/js/scripts/footer.min.js"></script>
+
+
+
+<!-- External Scripts -->
+<script src="https://www.google.com/recaptcha/api.js">async defer</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+
+<!-- Toastr CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
+
+<!-- Toastr JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha384-...your-hash..."
+        crossorigin="anonymous"></script>
+<!-- Custom Scripts -->
+<script src="~/js/Login.js"></script>
+
+
+
+
+</body>
+
+</html>
+
