--- a/Crowd_Funding_Platform/Views/Account/Registration.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/Registration.cshtml
@@ -87,11 +87,11 @@
                                                 <h4 class="text-center mb-2">Sign Up</h4>
                                             </div>
                                         </div>
-                                        <div class="text-center">
-                                            <p>
+                                      <div class="text-center">
+                                           @*  <p>
                                                 <small> Please enter your details to sign up and be part of our great community</small>
-                                            </p>
-                                        </div>
+                                            </p> *@
+                                        </div> 
                                         <div class="card-body" style="    margin-top: -25px;">
                                             <form id="Registration" method="post">
                                                 @* <div class="form-row">
@@ -117,7 +117,7 @@
                                                            placeholder="Email address">
                                                 </div>
                                                 <div class="form-group mb-50" style="margin-top: 1px;">
-                                                    <label class="text-bold-600" asp-for="PhoneNumber">PhoneNumber</label>
+                                                    <label class="text-bold-600" asp-for="PhoneNumber">Phone Number</label><br />
                                                     <input asp-for="PhoneNumber" class="form-control" id="PhoneNo"
                                                            placeholder="PhoneNumber">
                                                 </div>
