--- a/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
+++ b/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
@@ -122,6 +122,10 @@
                                 <i class="fas fa-user me-2 text-success"></i> My Profile
                             </a>
                             <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="~/Home/Index">
+                                <i class="fas fa-hand-holding-heart text-primary"></i> Contributions
+                            </a>
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="~/Account/Login">
                                 <i class="mdi mdi-logout me-2 text-primary"></i> Signout
                             </a>
